inject exploding kitten + throw message